...
        let pdfAction = UIAlertAction(title: "PDF (Table & photos)", style: .default, handler: { _ in
            Navigation.shared.showPDFPreview(for: controller, withPayments: payments, onComplete: onComplete)
        })
        let archiveAction = UIAlertAction(title: "Photos only", style: .default, handler: { _ in
            Navigation.shared.showShareImagesVC(for: controller, withPayments: payments, onComplete: onComplete)
        })
        let cancelAction = UIAlertAction(title: "Cancel", style: .cancel, handler: nil)
        
        let alert = AlertHelper(alertController: UIAlertController(title: "Send receipts as:", message: nil , preferredStyle: .actionSheet),
                                 actions: [pdfAction, archiveAction, cancelAction])
        alert.show(for: controller)
    }
    
...
     An alert to be shown when user tries to dismiss when no receipts are selected
     - Parameter controller: ViewController that should present the alarm
     */
    func showNoPaymentsErrorAlert(for controller: UIViewController) {
        Vibration.error.vibrate()
        let alert = AlertHelper(alertController: UIAlertController(title: "No receipts selected!", message: "Please select the receipts that you would like to send" , preferredStyle: .alert),
                                 actions: [UIAlertAction(title: "OK", style: .default, handler: nil)])
        alert.show(for: controller)
    }
    
    
    
    // MARK: - PDF Alerts
...
     Show action sheet when trying to save to the photo library
     - Parameter controller: ViewController that should present the alarm
     - Parameter image: Image that is to be saved to library
     - Parameter savePhotoSelector: Selector to be executed on save
     */
    func showSaveToLibAlert(for controller: UIViewController, image: UIImage, savePhotoSelector: Selector) {
        let deleteAction = UIAlertAction(title: "Yes, save", style: .default, handler: { _ in
            UIImageWriteToSavedPhotosAlbum(image, controller, savePhotoSelector, nil)
        })
        let cancelAction = UIAlertAction(title: "Cancel", style: .cancel, handler: nil)
        
        let alert = AlertHelper(alertController: UIAlertController(title: "Do you want to save the receipt image to your photos?", message: nil , preferredStyle: .actionSheet),
                                 actions: [deleteAction, cancelAction])
        alert.show(for: controller)
    }
    
    
    /**
...
    func showSaveSuccessStatusAlert(for controller: UIViewController, error: Error?) {
        let ac: UIAlertController
        if let err = error {
            ac = UIAlertController(title: "Unable to save the image", message: "Go to Settings -> WorkReceipts -> Photos -> Enable \"Add Photos Only\" in order to use this function.", preferredStyle: .alert)
            Log.exception(message: "Failed to save the photo to Library. Error: \(err.localizedDescription)")
        } else {
            ac = UIAlertController(title: "Receipt image saved", message: "Your receipt image has been saved to your photos.", preferredStyle: .alert)
        }
        ac.addAction(UIAlertAction(title: "OK", style: .default))
        controller.present(ac, animated: true)
    }
    
    /**
...
