...
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Currency:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ho7-Yl-PcA">
                                                    <rect key="frame" x="16" y="11.666666666666664" width="75" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="£" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cxY-6B-Qkf">
                                                    <rect key="frame" x="326.66666666666669" y="11.666666666666664" width="11" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="nvX-JA-8ld">
...
                                        <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="20"/>
                                        <color key="textColor" red="0.95294117647058818" green="0.61176470588235299" blue="0.070588235294117646" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mHb-vD-WSY">
                                        <rect key="frame" x="20" y="42.666666666666629" width="335" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="placeTextField"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="34" id="aDc-Km-2dA"/>
                                        </constraints>
                                        <color key="textColor" red="0.24313725490196078" green="0.32156862745098036" blue="0.41176470588235292" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="18"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                            </view>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Gh-fu-qVj" userLabel="DateView">
                                                <rect key="frame" x="168" y="0.0" width="167" height="58"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="20/08/2019" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4L5-nO-PLR">
                                                        <rect key="frame" x="0.0" y="22.666666666666746" width="167" height="34.333333333333343"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="dateTextField"/>
                                                        <color key="textColor" red="0.24313725489999999" green="0.32156862749999998" blue="0.41176470590000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="17"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                        <connections>
                                                            <action selector="pressedDateTextField:" destination="gk0-yM-Syz" eventType="editingDidBegin" id="Do7-tg-MhP"/>
                                                        </connections>
...
                                <rect key="frame" x="0.0" y="44" width="375" height="66"/>
                                <color key="barTintColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <textAttributes key="titleTextAttributes">
                                    <color key="textColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </textAttributes>
                                <items>
                                    <navigationItem title="Payment Details" id="1DN-QI-oPa">
                                        <leftBarButtonItems>
                                            <barButtonItem title="return" image="chevron.left" catalog="system" id="gkD-Cs-HIA">
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <connections>
                                                    <action selector="returnToCameraBarButtonPressed:" destination="gk0-yM-Syz" id="t7i-eP-X13"/>
                                                </connections>
                                            </barButtonItem>
                                            <barButtonItem title="save to photos" image="square.and.arrow.down" catalog="system" id="BFW-pn-e1x">
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <connections>
                                                    <action selector="saveToLibraryBarButtonPressed:" destination="gk0-yM-Syz" id="2P7-J0-ahd"/>
                                                </connections>
                                            </barButtonItem>
                                        </leftBarButtonItems>
...
