...
    
    func setupAddButton() {
        addButton.backgroundColor = .flatOrange
        addButton.layer.cornerRadius = addButton.frame.size.height/4
        addButton.layer.applyShadow(color: .flatOrange, alpha: 0.5, x: 1, y: 4, blur: 6)
        
        let buttonTitle = (paymentAction == .AddPayment) ? "Add" : "Update"
        addButton.setTitle( buttonTitle, for: .normal)
        
        buttonAnimations.startAnimatingPressActions(for: addButton)
    }
    
    
...
    /// Executed on "Cancel" button in toolbar
    @objc private func onDatePickerCancelled() {
        date = savedDate
        dateTextField.resignFirstResponder()
    }
    
    /// Executed on "Done" button in toolbar
    @objc private func onDatePickerDonePressed() {
        savedDate = date
        dateTextField.resignFirstResponder()
    }
    
    /// executed when date picker scrolls (value changes)
...
