...
    
    private let textHelper = TextHelper()
    private let buttonAnimations = AddButtonAnimations()
    
    private let nextButton: UIButton = {
        let button = UIButton()
        button.accessibilityIdentifier = "WelcomeOboardingNextButton"
        button.setTitle("Next →", for: .normal)
        button.titleLabel?.font = UIFont.arialBold(ofSize: 19)
        button.backgroundColor = .flatOrange
        button.layer.cornerRadius = 10
        button.layer.applyShadow(color: .flatOrange, alpha: 0.5, x: 1, y: 4, blur: 6)
        return button
    }()
    
    private lazy var welcomeLabel: UILabel = {
        let welcomePageText = textHelper.create(text: titleText, bold: true, fontSize: 40)
        welcomePageText.append(textHelper.create(text: sloganText, bold: true, fontSize: 18))
        let label = UILabel()
        label.accessibilityIdentifier = "WelcomeText"
        label.attributedText = welcomePageText
        label.numberOfLines = 0
        return label
    }()
    
    private lazy var bottomLabel: UILabel = {
...
