...
        
        showingView = allViews[pageNum]
        showingView?.delegate = self
        
        if pageNum == allViews.count - 1 {
            guard let lastView = showingView as? ShowElementView else { return }
            lastView.nextButton.setTitle("Done!", for: .normal)
            lastView.nextButton.backgroundColor = .clear
            lastView.nextButton.layer.removeShadow()
        }
        
        
        
...
