...
                    </constraints>
                </view>
                <segmentedControl opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="cOg-BH-ggV">
                    <rect key="frame" x="10" y="93" width="394" height="32"/>
                    <segments>
                        <segment title="Pending"/>
                        <segment title="Claimed"/>
                        <segment title="All"/>
                    </segments>
                    <connections>
                        <action selector="segmentedControlValueChanged:" destination="-1" eventType="valueChanged" id="HTZ-hu-dcd"/>
                    </connections>
                </segmentedControl>
...
